--- a/css/index.css
+++ b/css/index.css
@@ -20,6 +20,12 @@ body {
     align-items: center;
 }
 
+.logo {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
 .logo img {
     height: 40px;
     margin-right: 10px;
@@ -27,7 +33,8 @@ body {
 
 .logo h2 {
     color: #1a1a1a;
-    font-size: 24px;
+    font-size: 1rem;
+    font-family: 'Courier New', Courier, monospace;
     margin: 0;
 }
 
@@ -96,7 +103,7 @@ body {
     padding: 20px;
     border: 1px solid #ddd;
     border-radius: 8px;
-    max-width: 400px;
+    /* max-width: 400px;     */
 }
 
 .form-group {
@@ -290,6 +297,15 @@ body {
     text-align: center;
 }
 
+.register_form{
+    width: 100%;
+    height: fit-content;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+}
+
 /* Styling for the Register Form */
 .register-form {
     background-color: #f9f9f9;
@@ -371,4 +387,25 @@ body {
     margin-bottom: 20px;
     font-weight: 600;
     text-align: center;
+}
+
+.team_page{
+    width: 100%;
+    height: 90vh;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+}
+
+.team_form{
+    width: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+}
+
+.existing_team{
+    width: 50%;
+    padding: 0 2rem;
 }
