--- a/css/login.css
+++ b/css/login.css
@@ -5,6 +5,7 @@ body {
     justify-content: center;
     align-items: center;
     height: 100vh;
+    width: 100%;
     margin: 0;
     background-color: #f2f2f2;
 }
@@ -81,7 +82,7 @@ body {
 .section-title {
     font-size: 24px;
     color: #333;
-    margin-bottom: 20px;
+    margin-bottom: 5px;
     font-weight: 600;
 }
 
@@ -99,7 +100,8 @@ body {
     padding: 20px;
     border: 1px solid #ddd;
     border-radius: 8px;
-    max-width: 400px;
+    width: 90%;
+    /* max-width: 400px; */
 }
 
 .form-group {
@@ -175,7 +177,7 @@ body {
 .section-title {
     font-size: 24px;
     color: #333;
-    margin-bottom: 20px;
+    margin-bottom: 2px;
     font-weight: 600;
     text-align: center;
 }
